--- a/xsrc/README
+++ b/xsrc/README
@@ -2,3 +2,8 @@
 # $Id$
 
 In this directory are all AWS files that depends on the XMLAda parser.
+
+These files are compiled as part of the build for all ../src/ packages.
+
+Note that AWS.Jabber API was part of the ../src directory, for old ChangeLog
+entries look into ../src/ChangeLog.
