--- a/xsrc/ChangeLog
+++ b/xsrc/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-08  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* README:
+	Add some comment.
+
 2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* README:
