Fix last notes.

--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -2,8 +2,7 @@
 
 	* soap-message-reader.adb:
 	(Characters): Change pragma Unreferenced to Warnings Off for Tmp
-	 becouse of GNAT 3.15p bug with pragma Unreferenced (left side
-	 of assignment).
+	 because GNAT 3.15p handle a left side assignment as a reference.
 	(Ignorable_Whitespace): Idem.
 
 2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>
