--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-20  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* wsdl2aws.adb:
+	Set WSDL_File only when Filename has been set with the local filename.
+
 2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* tools.gpr:
