--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-21  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap1.out, soap2.out, soap3.out, testxml.out, workorder.out:
+	Update output (XML encoding).
+
 2003-04-21  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
