--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-22  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-message-reader.adb:
+	(Characters): If the encoding is not Utf-8 just keep the string
+	 as-is. We do not want this routine to raise an exception.
+
 2003-05-21  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap.ads:
