--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,11 @@
+2003-06-18  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-soap__soap.ads, aws-soap__soap.adb:
+	Initial revision.
+	
+	* aws-soap__nosoap.ads, aws-soap__nosoap.adb:
+	Initial revision.
+
 2003-05-29  Anisimkov Dmitriy <anisimkov@yahoo.com>
 
 	* src/test_uconv.adb:
