--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2003-06-21  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* src.gpr:
+	Undo previous check-in.
+
 	* makefile:
 	(aws-soap.ads): Target removed.
 	(aws-soap.adb): Target removed.
