--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,12 @@
+2003-06-22  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-client.adb:
+	(Call): Add SOAPAction for the persistent connection. Pass it to
+	 the AWS.Client.SOAP_Post call.
+
+	* soap-client.ads:
+	(Call): Add SOAPAction for the persistent connection.
+
 2003-06-21  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-wsdl-parser.adb:
