--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,13 @@
+2003-06-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-client.ads:
+	(HTTP_Connection): SOAPAction field removed.
+
+	* aws-client.adb:
+	(Internal_Post): New routine.
+	(SOAP_Post): Persistent version based on Internal_Post.
+	(Post): Persistent version based on Internal_Post.
+
 2003-06-22  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-client.adb:
