--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-07  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-net-std__gnat.adb:
+	(Receive): Fix type in message string.
+
 2003-06-21  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-soap__nosoap.ads, aws-soap__nosoap.adb:
