--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-09  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-response-set.adb:
+	(Cache_Control): Add header only if a value has been specified.
+
 2003-07-07  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-jabber.ads, aws-jabber.adb:
