--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,11 @@
+2003-07-15  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-net-std__gnat.adb:
+	(Shutdown): Add exception handling around Close_Socket. In some
+	 cases (not really clear) the socket file descriptor is wrong and
+	 this routine returns EBAF. This must be considered as a
+	 workaround and analysed more deeply later.
+
 2003-07-07  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-net-std__gnat.adb:
