--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-28  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	Fix typo.
+
 2003-06-21  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
