--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-31  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* templates_parser.adb:
+	Update to version 5.4. Fix memory leak for missing include files.
+
 2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
