--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,15 @@
+2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	Add section to build AWS based on project files.
+	(gbuild): New target.
+	(gclean): Idem.
+	(gsetup): Idem.
+
+	* demos.gpr:
+	New version, this version make it possible to develop AWS using
+	 the project files from GPS.
+
 2003-07-28  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
