--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-wsdl.adb:
+	(Is_Standard): Add pragma Unreferenced.
+
 2003-07-28  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-types.ads:
