--- a/ssl/ChangeLog
+++ b/ssl/ChangeLog
@@ -1,3 +1,19 @@
+2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	Add section to build AWS based on project files.
+	(gbuild): New target.
+	(gclean): Idem.
+	(gsetup): Idem.
+
+	* nossl.gpr:
+	New version, this version make it possible to develop AWS using
+	 the project files from GPS.
+
+	* ssl.gpr:
+	New version, this version make it possible to develop AWS using
+	 the project files from GPS.
+
 2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* ssl.gpr, nossl.gpr:
