--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,5 +1,10 @@
 2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* makefile:
+	Use variable instead of directly calling tools.
+
+2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
+
 	* src_include.gpr:
 	Initial revision.
 	
