--- a/ssl/ChangeLog
+++ b/ssl/ChangeLog
@@ -1,6 +1,11 @@
 2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
+	Use variable instead of directly calling tools.
+	
+2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
 	Add section to build AWS based on project files.
 	(gbuild): New target.
 	(gclean): Idem.
