--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,10 @@
+2003-08-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* soap-wsdl.adb:
+	(To_Type): New routine.
+	(Is_Standard): Use new To_Type routine instead of exception handler
+	 for recognize non standard type.
+
 2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
