--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2003-08-28  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-server.ads:
+	(Start_Log): Add some comments.
+	(Flush_Log): Fix typo in comment.
+
 2003-08-24  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-server.ads, aws-server.adb:
