--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-28  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* templates_parser.adb:
+	Update to version 5.5. This version uses lot less stack.
+
 2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
