--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,15 @@
+2003-08-30  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* table_of_dynamic_keys_and_static_values_g.ads,
+	  table_of_dynamic_keys_and_static_values_g.adb,
+	  table_of_static_keys_and_dynamic_values_g.ads,
+	  table_of_static_keys_and_dynamic_values_g.adb,
+	  table_of_static_keys_and_static_values_g.ads,
+	  table_of_static_keys_and_static_values_g.adb,
+	  table_of_strings_and_static_values_g.ads,
+	  table_of_strings_and_static_values_g.adb:
+	Add release comment about new Get_Value routine.
+
 2003-08-29  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* table_of_dynamic_keys_and_static_values_g.ads,
