--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2003-09-01  Jerome Roussel <roussel@act-europe.fr>
+
+	* aws-response.ads:
+	(File): Add parameter Cache_Control.
+
+	* aws-response.adb (Module): 
+	(File): Add parameter Cache_Control. Set response data's cache
+	 control.
+
 2003-08-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-session.adb:
