--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2003-09-07  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(RT_STD): Add sessions3.
+
+	* sessions3.adb, sessions3.out:
+	Initial revision.
+
 2003-09-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* dirop.adb:
