--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-18  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* sback.adb, sback.out, ssback.adb, ssback.out, makefile:
+	New regression tests for AWS.Server.Give_Back_Socket routine.
+
 2003-09-09  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* server_info.adb:
