--- a/docs/TODO
+++ b/docs/TODO
@@ -96,3 +96,5 @@ implemented:
 
 - Add GNAT project files to use AWS. Only support for developpers has been
   implemented.
+
+- Document the Give_Back_Socket routine.
